--- a/css/layout.css
+++ b/css/layout.css
@@ -24,3 +24,26 @@ footer
 
 }
 
+.container{
+    width: 992px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.post-title {
+    width: 75%;
+    color: #f16529;
+    text-align: center;
+    font-size: 30px;
+}
+.post-body{
+    color: #777;
+    line-height: 145%;
+
+}
+.post-body p{
+    text-align: justify;
+
+}
+h2{color:
+    #f16529;}
